src/objects/OpportunityAdPlacement__c.object
<CustomObject>
    <fields>
        <fullName>AdPlacement__c</fullName>
        <label>Ad Placement</label>
        <referenceTo>AdPlacement__c</referenceTo>
        <relationshipLabel>Opportunity Ad Placements</relationshipLabel>
        <relationshipName>OpportunityAdPlacements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunity Ad Placements</relationshipLabel>
        <relationshipName>ContractAdPlacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityPlatform__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity Platform</label>
        <referenceTo>OpportunityPlatform__c</referenceTo>
        <relationshipLabel>Opportunity Ad Placements</relationshipLabel>
        <relationshipName>OpportunityAdPlacements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Ad Placements</relationshipLabel>
        <relationshipName>OpportunityAdPlacements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PlatformId__c</fullName>
        <formula>AdPlacement__r.Platform__c</formula>
        <label>Platform Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformName__c</fullName>
        <formula>AdPlacement__r.Platform__r.Name</formula>
        <label>Platform Name</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Ad Placement</label>
    <nameField>
        <displayFormat>OAP-{0000}</displayFormat>
        <label>Opportunity Ad Placement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Ad Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>